--- a/public/index.html
+++ b/public/index.html
@@ -24,26 +24,26 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
 
-    <title>mistX</title>
-    <meta name="title" content="mistX - Flashdex">
-    <meta name="keywords" content="mistX, DEX, FlashDex, flashbots, MEV, Alchemist, Alchemists, $mist, MIST, sandwich attacks">
-    <meta name="description" content="Trade through Flashbots, no frontrunning and no sandwich attacks. Created by Alchemists, powered by Flashbots, driven by $mist.">
+    <title>Jawi</title>
+    <meta name="title" content="Jawi - Flashdex">
+    <meta name="keywords" content="Jawi, DEX, FlashDex, flashbots, MEV, Alchemist, Alchemists, $Jawi, Jawi, sandwich attacks">
+    <meta name="description" content="Trade through Flashbots, no frontrunning and no sandwich attacks. Created by Alchemists, powered by Flashbots, driven by $Jawi.">
     <meta name="robots" content="index, follow">
     <meta name="language" content="English">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://mistx.io">
-    <meta property="og:title" content="mistX - Flashdex">
+    <meta property="og:url" content="https://app.jawi.club">
+    <meta property="og:title" content="Jawi - Flashdex">
     <meta property="og:description" content="Trade through Flashbots, no frontrunning and no sandwich attacks.
-    Created by Alchemists, powered by Flashbots, driven by $mist.">
+    Created by Alchemists, powered by Flashbots, driven by $Jawi.">
     <meta property="og:image" content="https://mistx.io/assets/img/mistX.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://mistx.io">
-    <meta property="twitter:title" content="mistX - Flashdex">
-    <meta property="twitter:description" content="Trade through Flashbots, no frontrunning and no sandwich attacks. Created by Alchemists, powered by Flashbots, driven by $mist.">
+    <meta property="twitter:url" content="https://app.jawi.club">
+    <meta property="twitter:title" content="Jawi - Flashdex">
+    <meta property="twitter:description" content="Trade through Flashbots, no frontrunning and no sandwich attacks. Created by Alchemists, powered by Flashbots, driven by $Jawi.">
     <meta property="twitter:image" content="https://mistx.io/assets/img/mistX.png">
   </head>
   <body>
